# eosform

./: .gitignore  LICENSE  Makefile  README.md  eos.py  fixtures.json  manage.py  pyproject.toml
.circleci/: config.yml
base/: tests.py  views.py
conf/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
conf/settings/: base.py  dev.py  production.py
config/: admin.py  models.py
config/migrations/: 0001_initial.py  0002_settings_domain.py  0003_settings_eosgate.py  0004_settings_eos_node_uri.py  0005_settings_eos_account.py
locale/en/LC_MESSAGES/: django.po
requirements/: base.txt  dev.txt  prod.txt
static/scripts/: countly.js  slide.js
static/styles/: create.css  dashboard.css  landing.css  reset.css  response.css  signin.css  style.css  survey.css
surveys/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
surveys/migrations/: 0001_initial.py  0002_auto_20200516_2342.py  0003_survey_status.py  0004_auto_20200524_1919.py  0005_auto_20200525_2021.py  0006_auto_20200525_2141.py  0007_participation.py  0008_participation_txid.py  0009_auto_20200530_1647.py
templates/: 400.html  403.html  404.html  500.html  base.html  index.html  landing.html
templates/includes/: survey.html
templates/surveys/: create.html  json.html  response.html  survey.html
templates/users/: dashboard.html  finish_reset_password.html  reset_password.html  responses.html  signin.html  signup.html
users/: admin.py  forms.py  models.py  otp.py  tasks.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_is_email_verified.py
(+4 files in other folders)
