[tool.poetry]
name = "eosform"
version = "0.1.0"
description = "eosform - EOS-based surveys"
authors = ["Olexandr Shalakhin <olex@teeko.io>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.6"
django-extensions = "^2.2.9"
python-dotenv = "^0.13.0"
psycopg2-binary = "^2.8.5"
django-solo = "^1.1.3"
celery = "^4.4.2"
environs = "^8.0.0"
django-anymail = "^7.1.0"
django-redis = "^4.12.1"
django-cache-url = "^3.1.2"
uvicorn = "^0.11.5"
sentry-sdk = "^0.14.4"
asgiref = "^3.2.7"

[tool.poetry.dev-dependencies]
ipython = "^7.14.0"
ipdb = "^0.13.2"
Werkzeug = "^1.0.1"
django-debug-toolbar = "^2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
